z-index fix

--- a/style.sass
+++ b/style.sass
@@ -35,6 +35,7 @@ a
 
     opacity: 0
     transition-duration: 0.1s
+    z-index: -1
 
     p
         font-size: 36px
